--- a/css/theme-matte.css
+++ b/css/theme-matte.css
@@ -136,7 +136,7 @@ img {
   margin-bottom: 48px;
 }
 h1 {
-  font-size: 32px;
+  font-size: 30px;
   line-height: 44px;
   margin-bottom: 48px;
 }
@@ -192,30 +192,58 @@ span.text-white a {
 
 .category{
   font-weight: 600;
-  font-size: 25px;
   margin-bottom: 60px;
   padding-left: 15px;
   color: #808080;
 }
 
+.video-img-first{
+  height:500px;
+  background-size: cover;
+  position: relative;
+  border-radius: 10px;
+  display:flex;
+  align-items:center; 
+  justify-content:center;
+  transition: 0.6s;
+}
 .video-img{
   height: 315px;
   background-size: cover;
   position: relative;
+  border-radius: 10px;
   display:flex;
   align-items:center; 
   justify-content:center;
+  transition: 0.6s;
 }
 
 .play-icon{
+  position: relative;
   position: absolute;
-  padding: 60px;
+  padding: 20% 40%;
   transition: 0.2s;
+}
+.video-img-first:hover{
+  opacity: 0.8;
+  box-shadow: 0px 10px 18px #888888;
+}
+.video-img:hover{
+  opacity: 0.8;
+  box-shadow: 0px 10px 18px #888888;
 }
 .play-icon:hover{
   opacity: 0.5;
 }
-
+.modal-title{
+  color:white;
+}
+.modal-header .close{
+  color: white;
+  font-size: 30px;
+  opacity: 1;
+  font-weight:300;
+}
 
 /*#videofullpage{
 background-color: rgba(0,0,0, 0.9);
@@ -3838,6 +3866,9 @@ footer.short-2 .contact-action:hover {
   margin: 32px 0px;
   position: relative;
   z-index: 1;
+}
+.media-holder {
+  margin-bottom: 60px;
 }
 .article-body iframe {
   width: 100%;
