--- a/css/theme-matte.css
+++ b/css/theme-matte.css
@@ -210,7 +210,6 @@ span.text-white a {
 .video-img{
   height: 315px;
   background-size: cover;
-  position: relative;
   border-radius: 10px;
   transition: 0.6s;
 }
@@ -249,7 +248,7 @@ span.text-white a {
 }
 
 .modal-header .close:focus, .close:hover{
-  color:gray;
+  color: #D8D8D8 !important;
 }
 
 /*---bryan-fix-end---*/
